Custom--app/main/default/objects/Acq_Prospect__c/fields/Property_fits_buy_box__c.field-meta.xml
<CustomField>
    <fullName>Property_fits_buy_box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property fits buy box?</label>
    <type>Checkbox</type>
</CustomField>