Custom--app/main/default/objects/Acq_Prospect__c/fields/Property_Score__c.field-meta.xml
<CustomField>
    <fullName>Property_Score__c</fullName>
    <label>Property Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>