Custom--app/main/default/objects/Acq_Prospect__c/fields/Property_Street_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Address_Text__c</fullName>
    <label>Property Street Address Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>