Custom--app/main/default/objects/Acq_Prospect__c/fields/Prospect_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Created_Date__c</fullName>
    <formula>CreatedDate</formula>
    <label>Prospect Created Date</label>
    <type>Date</type>
</CustomField>