Custom--app/main/default/objects/Acq_Prospect__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <formula>IF(
				ISBLANK(Approved_Offer_Price__c),
				Offer_Price_Max_Bid__c ,
				IF(
								ISBLANK(Offer_Price_Max_Bid__c),
								0,
								Approved_Offer_Price__c
				)
)</formula>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>