Custom--app/main/default/objects/Acq_Prospect__c/fields/Purchase_Price_as_of_MV__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_as_of_MV__c</fullName>
    <formula>Purchase_Price__c / Market_Value_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price as % of MV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>