Custom--app/main/default/objects/Acq_Prospect__c/fields/Purchase_Price_PSF__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_PSF__c</fullName>
    <formula>Purchase_Price__c / Square_Feet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price PSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>