Custom--app/main/default/objects/Acq_Prospect__c/fields/Purchasing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Entity__c</fullName>
    <formula>Market__r.Purchasing_Entity__c</formula>
    <label>Purchasing Entity</label>
    <type>Text</type>
</CustomField>