Custom--app/main/default/objects/Acq_Prospect__c/fields/Rent_UW_Analyst_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rent_UW_Analyst_Notes__c</fullName>
    <label>Rent @ UW Analyst Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>