Custom--app/main/default/objects/Acq_Prospect__c/fields/Rent_UW_Comps__c.field-meta.xml
<CustomField>
    <fullName>Rent_UW_Comps__c</fullName>
    <label>Rent @ UW Comps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>