Custom--app/main/default/objects/Acq_Prospect__c/fields/Rental_Income_UW__c.field-meta.xml
<CustomField>
    <fullName>Rental_Income_UW__c</fullName>
    <formula>Expected_Gross_Annual_Rent_UW__c + Stabilized_Vacany_Loss_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental Income @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>