Custom--app/main/default/objects/Acq_Prospect__c/fields/Reopen_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Reason__c</fullName>
    <label>Reopen Reason</label>
    <type>TextArea</type>
</CustomField>