Custom--app/main/default/objects/Acq_Prospect__c/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residence</label>
    <referenceTo>Residence__c</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>