Custom--app/main/default/objects/Acq_Prospect__c/fields/Roof_Score__c.field-meta.xml
<CustomField>
    <fullName>Roof_Score__c</fullName>
    <formula>IF(
				OR(Roof_Type__c ='',Roof_Type__c ='Asphalt',Roof_Type__c ='Shingle'),
				3,
				IF(
								OR(Roof_Type__c ='Metal'),
				    4,
				    IF(
								    OR(Roof_Type__c ='Built-up',Roof_Type__c = 'Hot Mopped',Roof_Type__c ='Other'),
							    	1,
								        IF(
											        	OR(Roof_Type__c ='Concrete',Roof_Type__c ='Slate',Roof_Type__c ='Tile'),
												        5,
												            2))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roof Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>