Custom--app/main/default/objects/Acq_Prospect__c/fields/RPC_Land_Value_UW__c.field-meta.xml
<CustomField>
    <fullName>RPC_Land_Value_UW__c</fullName>
    <label>RPC Land Value @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>