Custom--app/main/default/objects/Acq_Prospect__c/fields/RPC_Structure_Est_UW__c.field-meta.xml
<CustomField>
    <fullName>RPC_Structure_Est_UW__c</fullName>
    <formula>RPC_Structure_PSF_UW__c * Square_Feet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RPC Structure Est @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>