Custom--app/main/default/objects/Acq_Prospect__c/fields/Seller_Counteroffer_Price__c.field-meta.xml
<CustomField>
    <fullName>Seller_Counteroffer_Price__c</fullName>
    <formula>Opportunity__r.Seller_Counteroffer_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Counteroffer Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>