Custom--app/main/default/objects/Acq_Prospect__c/fields/SqFt_Score__c.field-meta.xml
<CustomField>
    <fullName>SqFt_Score__c</fullName>
    <formula>IF( SqFt_St_Dev__c&lt;=-2,1,IF(AND(SqFt_St_Dev__c>-2,SqFt_St_Dev__c&lt;=-1),3,IF(AND(SqFt_St_Dev__c>-1,SqFt_St_Dev__c&lt;=1),5,IF(AND(SqFt_St_Dev__c>1,SqFt_St_Dev__c&lt;=2),4,2))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SqFt Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>