Custom--app/main/default/objects/Acq_Prospect__c/fields/SqFt_St_Dev__c.field-meta.xml
<CustomField>
    <fullName>SqFt_St_Dev__c</fullName>
    <formula>((Square_Feet__c-Market__r.SqFt_Median__c) / Market__r.SqFt_Standard_deviation__c)</formula>
    <label>SqFt St Dev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>