Custom--app/main/default/objects/Acq_Prospect__c/fields/Stabilized_Vacany_Loss_UW__c.field-meta.xml
<CustomField>
    <fullName>Stabilized_Vacany_Loss_UW__c</fullName>
    <formula>-1*( Expected_Gross_Annual_Rent_UW__c*(1- Market__r.Occupancy__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stabilized Vacany Loss @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>