Custom--app/main/default/objects/Acq_Prospect__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Auto calculated based on process steps and approvals</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Underwriting Complete</fullName>
            </value>
            <value>
                <fullName>Offer Approved</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Budget Walk Ordered</fullName>
            </value>
            <value>
                <fullName>Moved to Pipeline</fullName>
            </value>
            <value>
                <fullName>Cancelled / Dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>