Custom--app/main/default/objects/Acq_Prospect__c/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <label>Submarket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>