Custom--app/main/default/objects/Acq_Prospect__c/fields/Submitted_for_Dir_IMG_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Dir_IMG_Approval_Date__c</fullName>
    <label>Submitted for Dir IMG Approval Date</label>
    <type>Date</type>
</CustomField>