Custom--app/main/default/objects/Acq_Prospect__c/fields/SVP_IMG_Offer_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>SVP_IMG_Offer_Approval_Date__c</fullName>
    <label>SVP IMG Offer Approval Date</label>
    <type>Date</type>
</CustomField>