Custom--app/main/default/objects/Acq_Prospect__c/fields/Total_Replacement_Cost_UW__c.field-meta.xml
<CustomField>
    <fullName>Total_Replacement_Cost_UW__c</fullName>
    <formula>RPC_Land_Value_UW__c +  RPC_Structure_Est_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Replacement Cost @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>