Custom--app/main/default/objects/Acq_Prospect__c/fields/Total_Revenue_UW__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_UW__c</fullName>
    <formula>Rental_Income_UW__c  +  Other_Inc_Conc_Bad_Debt_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>