Custom--app/main/default/objects/Acq_Prospect__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <formula>Opportunity__r.Year_Built__c</formula>
    <label>Year Built</label>
    <type>Text</type>
</CustomField>