Custom--app/main/default/objects/Acq_Prospect__c/fields/Year_Built_Score__c.field-meta.xml
<CustomField>
    <fullName>Year_Built_Score__c</fullName>
    <formula>IF(VALUE(Year_Built__c)&lt;1950,1,IF(AND(VALUE(Year_Built__c)>=1950,VALUE(Year_Built__c)&lt;1970),1,IF(AND(VALUE(Year_Built__c)>=1970,VALUE(Year_Built__c)&lt;1980),2,IF(AND(VALUE(Year_Built__c)>=1980,VALUE(Year_Built__c)&lt;1990),3,IF(AND(VALUE(Year_Built__c)>=1990,VALUE(Year_Built__c)&lt;2000),4,5)))))</formula>
    <label>Year Built Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>