Custom--app/main/default/objects/Acq_Prospect__c/recordTypes/AfterConvertToPipeline.recordType-meta.xml
<RecordType>
    <fullName>AfterConvertToPipeline</fullName>
    <active>true</active>
    <label>AfterConvertToPipeline</label>
</RecordType>