Custom--app/main/default/objects/Acq_Prospect__c/recordTypes/Analyst_ReadWrite_Record.recordType-meta.xml
<RecordType>
    <fullName>Analyst_ReadWrite_Record</fullName>
    <active>true</active>
    <label>Analyst ReadWrite Record</label>
</RecordType>