Custom--app/main/default/objects/Acq_Prospect__c/validationRules/Cannot_reopen_closed_Prospect.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_reopen_closed_Prospect</fullName>
    <active>false</active>
    <description>Once a prospect is closed, then analyst cannot reopen it</description>
    <errorConditionFormula>IF( AND(
				 ISPICKVAL(PRIORVALUE(Status__c),"Cancelled / Dead"),
				 TODAY() -	DATEVALUE(LastModifiedDate) &lt; 30
				) ,  
			true, 
			false)</errorConditionFormula>
    <errorMessage>Cannot be reopened</errorMessage>
</ValidationRule>