Custom--app/main/default/objects/Acq_Prospect__c/validationRules/Property_fits_buy_box.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_fits_buy_box</fullName>
    <active>true</active>
    <description>Property details should be validated.</description>
    <errorConditionFormula>AND(
     OR(
    				ISPICKVAL(Status__c, 'Underwriting Complete'),
								ISPICKVAL(Status__c, 'Offer Approved')
				),
    
        Property_fits_buy_box__c = false
				    
		)</errorConditionFormula>
    <errorDisplayField>Property_fits_buy_box__c</errorDisplayField>
    <errorMessage>The property should fit the buy box</errorMessage>
</ValidationRule>