Custom--app/main/default/objects/Acq_Prospect__c/validationRules/Property_Validated.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_Validated</fullName>
    <active>true</active>
    <description>Property details should be validated.</description>
    <errorConditionFormula>AND(
     OR(
    				ISPICKVAL(Status__c, 'Underwriting Complete'),
								ISPICKVAL(Status__c, 'Offer Approved')
				),
    
  
        Property_Validated__c = false
	    
				     
)</errorConditionFormula>
    <errorDisplayField>Property_Validated__c</errorDisplayField>
    <errorMessage>The property details should be validated.</errorMessage>
</ValidationRule>