Custom--app/main/default/objects/Acq_Prospect__c/validationRules/Record_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Lock</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISCHANGED(Record_Lock__c)), 
Record_Lock__c	= true 

)</errorConditionFormula>
    <errorMessage>Cannot edit this Record as it has either been Cancelled or Moved to Pipeline</errorMessage>
</ValidationRule>