Custom--app/main/default/objects/Acq_Prospect__c/validationRules/Skipping.validationRule-meta.xml
<ValidationRule>
    <fullName>Skipping</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 Offer_Accepted__c=False,
Converted_to_Pipeline__c= True 
)</errorConditionFormula>
    <errorDisplayField>Address__c</errorDisplayField>
    <errorMessage>Please complete the required steps before converting to Pipeline.</errorMessage>
</ValidationRule>