Custom--app/main/default/objects/Acq_Prospect__c/validationRules/Skipping_Steps.validationRule-meta.xml
<ValidationRule>
    <fullName>Skipping_Steps</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 Offer_Accepted__c = false, 
Budget_Walk_Ordered__c = True 
)</errorConditionFormula>
    <errorDisplayField>Address__c</errorDisplayField>
    <errorMessage>A Budget Walk cannot be ordered until the Offered Amount has been accepted</errorMessage>
</ValidationRule>