Custom--app/main/default/objects/Acq_Prospect__c/listViews/Assigned_to_Me.listView-meta.xml
<ListView>
    <fullName>Assigned_to_Me</fullName>
    <columns>NAME</columns>
    <columns>Accepted_Contract_Date__c</columns>
    <columns>Accepted_Contract_Price__c</columns>
    <columns>IMG_Director__c</columns>
    <columns>Approved_Offer_Price__c</columns>
    <filterScope>Mine</filterScope>
    <label>Assigned to Me</label>
</ListView>